--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "csv-parse": "^4.10.1",
     "form-data": "^3.0.0",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "strapi": "^3.0.0-beta.20.3",
     "strapi-client": "^1.0.0"
   }
 }
