--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "node-fetch": "^2.6.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "rxjs": "^6.6.3",
     "strapi": "^3.0.0-beta.20.3",
-    "strapi-client": "^1.0.0"
+    "strapi-client": "^1.0.0",
+    "xlsx": "^0.16.8"
   }
 }
